<resources>
    <string name="app_name"></string>
    <string name="pick_a_country">Schermata 1</string>
    <string name="title">Titolo</string>
    <string name="secondary_text">Tigre del Bengala</string>
    <string name="supporting_text">supporting_text</string>
    <string name="action_1">action_1</string>
    <string name="action_2">action_2</string>
    <string name="pick_categories">Pick some categories</string>
    <string name="sport">Sports</string>
    <string name="health">health</string>
    <string name="welcome">WELCOME!</string>
    <string name="already_registered">Are you already registered?</string>
    <string name="email">[E-mail]</string>
    <string name="password">password</string>
    <string name="pww_forgotten">hai dimenticato la password?</string>
    <string name="login">login</string>
    <string name="login_google">login whit google</string>
    <string name="or">or</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>