<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        app:srcCompat="@drawable/a"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/welcome"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/already_registered"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        style="?attr/textInputOutlinedStyle"
        android:background="#05000000"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        style="?attr/textInputOutlinedStyle"
        android:background="#05000000"
        app:startIconDrawable="@drawable/baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="top"
        android:text="@string/pww_forgotten" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/loginButton"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp">

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="#555"
            android:layout_toStartOf="@id/text_or"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_centerInParent="true"
            />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="#555"
            android:layout_toEndOf="@id/text_or"
            android:layout_centerInParent="true"/>


    </RelativeLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/login_google"
        />

</LinearLayout>

